// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one"
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 2`] = `4`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 3`] = `
"4 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one"
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 1`] = `""`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 2`] = `0`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 3`] = `
"0 Accessibility issues found
 "
`;

exports[`a11y Results Formatter should format using specified options: 0 1`] = `"[{\\"id\\":\\"document-title\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"ACT\\",\\"cat.text-alternatives\\",\\"wcag242\\",\\"wcag2a\\"],\\"description\\":\\"Ensures each HTML document contains a non-empty <title> element\\",\\"help\\":\\"Documents must have <title> element to aid in navigation\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.2/document-title?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"doc-has-title\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Document does not have a non-empty <title> element\\"}],\\"all\\":[],\\"none\\":[],\\"impact\\":\\"serious\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix any of the following:\\\\n  Document does not have a non-empty <title> element\\"}]},{\\"id\\":\\"link-name\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"ACT\\",\\"cat.name-role-value\\",\\"section508\\",\\"section508.22.a\\",\\"wcag244\\",\\"wcag2a\\",\\"wcag412\\"],\\"description\\":\\"Ensures links have discernible text\\",\\"help\\":\\"Links must have discernible text\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.2/link-name?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"has-visible-text\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"minor\\",\\"message\\":\\"Element does not have text that is visible to screen readers\\"},{\\"id\\":\\"aria-label\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-label attribute does not exist or is empty\\"},{\\"id\\":\\"aria-labelledby\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\"},{\\"id\\":\\"non-empty-title\\",\\"data\\":{\\"messageKey\\":\\"noAttr\\"},\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element has no title attribute\\"}],\\"all\\":[],\\"none\\":[{\\"id\\":\\"focusable-no-name\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element is in tab order and does not have accessible text\\"}],\\"impact\\":\\"serious\\",\\"html\\":\\"<a href=\\\\\\"#\\\\\\"></a>\\",\\"target\\":[\\"a\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Element is in tab order and does not have accessible text\\\\n\\\\nFix any of the following:\\\\n  Element does not have text that is visible to screen readers\\\\n  aria-label attribute does not exist or is empty\\\\n  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\\\n  Element has no title attribute\\"}]},{\\"id\\":\\"landmark-one-main\\",\\"impact\\":\\"moderate\\",\\"tags\\":[\\"best-practice\\",\\"cat.semantics\\"],\\"description\\":\\"Ensures the document has a main landmark\\",\\"help\\":\\"Document should have one main landmark\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.2/landmark-one-main?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[],\\"all\\":[{\\"id\\":\\"page-has-main\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"moderate\\",\\"message\\":\\"Document does not have a main landmark\\"}],\\"none\\":[],\\"impact\\":\\"moderate\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Document does not have a main landmark\\"}]},{\\"id\\":\\"page-has-heading-one\\",\\"impact\\":\\"moderate\\",\\"tags\\":[\\"best-practice\\",\\"cat.semantics\\"],\\"description\\":\\"Ensure that the page, or at least one of its frames contains a level-one heading\\",\\"help\\":\\"Page should contain a level-one heading\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[],\\"all\\":[{\\"id\\":\\"page-has-heading-one\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"moderate\\",\\"message\\":\\"Page must have a level-one heading\\"}],\\"none\\":[],\\"impact\\":\\"moderate\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Page must have a level-one heading\\"}]}]"`;

exports[`a11y Results Formatter should format using specified options: 1 1`] = `
"\\"* (document-title) Documents must have <title> element to aid in navigation: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/document-title

\\"* (link-name) Links must have discernible text: a\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/link-name

\\"* (landmark-one-main) Document should have one main landmark: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/landmark-one-main

\\"* (page-has-heading-one) Page should contain a level-one heading: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one"
`;

exports[`a11y Results Formatter should format using specified options: 2 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one"
`;

exports[`a11y Results Formatter should format using specified options: 3 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one"
`;

exports[`a11y Results Formatter should format using specified options: 4 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one"
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 1`] = `
"4 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one"
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 2`] = `
"4 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one"
`;

exports[`a11y Results Formatter should throw error when violations are present 1`] = `
"4 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one"
`;

exports[`a11y results filter should be setup with violations that can be reused across tests 1`] = `
Array [
  Object {
    "description": "Ensures each HTML document contains a non-empty <title> element",
    "help": "Documents must have <title> element to aid in navigation",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/document-title?application=axeAPI",
    "id": "document-title",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": null,
            "id": "doc-has-title",
            "impact": "serious",
            "message": "Document does not have a non-empty <title> element",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "ACT",
      "cat.text-alternatives",
      "wcag242",
      "wcag2a",
    ],
  },
  Object {
    "description": "Ensures every HTML document has a lang attribute",
    "help": "<html> element must have a lang attribute",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/html-has-lang?application=axeAPI",
    "id": "html-has-lang",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "messageKey": "noLang",
            },
            "id": "has-lang",
            "impact": "serious",
            "message": "The <html> element does not have a lang attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "ACT",
      "cat.language",
      "wcag2a",
      "wcag311",
    ],
  },
  Object {
    "description": "Ensures links have discernible text",
    "help": "Links must have discernible text",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/link-name?application=axeAPI",
    "id": "link-name",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": null,
            "id": "has-visible-text",
            "impact": "minor",
            "message": "Element does not have text that is visible to screen readers",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": null,
            "id": "aria-label",
            "impact": "serious",
            "message": "aria-label attribute does not exist or is empty",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": null,
            "id": "aria-labelledby",
            "impact": "serious",
            "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": Object {
              "messageKey": "noAttr",
            },
            "id": "non-empty-title",
            "impact": "serious",
            "message": "Element has no title attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
        "html": "<a href=\\"#\\"></a>",
        "impact": "serious",
        "none": Array [
          CheckResult {
            "data": null,
            "id": "focusable-no-name",
            "impact": "serious",
            "message": "Element is in tab order and does not have accessible text",
            "relatedNodes": Array [],
          },
        ],
        "target": Array [
          "a",
        ],
      },
    ],
    "tags": Array [
      "ACT",
      "cat.name-role-value",
      "section508",
      "section508.22.a",
      "wcag244",
      "wcag2a",
      "wcag412",
    ],
  },
  Object {
    "description": "Ensures the document has a main landmark",
    "help": "Document should have one main landmark",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/landmark-one-main?application=axeAPI",
    "id": "landmark-one-main",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [
          CheckResult {
            "data": null,
            "id": "page-has-main",
            "impact": "moderate",
            "message": "Document does not have a main landmark",
            "relatedNodes": Array [],
          },
        ],
        "any": Array [],
        "failureSummary": "Fix all of the following:
  Document does not have a main landmark",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "best-practice",
      "cat.semantics",
    ],
  },
  Object {
    "description": "Ensure that the page, or at least one of its frames contains a level-one heading",
    "help": "Page should contain a level-one heading",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one?application=axeAPI",
    "id": "page-has-heading-one",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [
          CheckResult {
            "data": null,
            "id": "page-has-heading-one",
            "impact": "moderate",
            "message": "Page must have a level-one heading",
            "relatedNodes": Array [],
          },
        ],
        "any": Array [],
        "failureSummary": "Fix all of the following:
  Page must have a level-one heading",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "best-practice",
      "cat.semantics",
    ],
  },
]
`;

exports[`a11y results filter should filter results for matching exception list 0 1`] = `
Array [
  Object {
    "description": "Ensures every HTML document has a lang attribute",
    "help": "<html> element must have a lang attribute",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/html-has-lang?application=axeAPI",
    "id": "html-has-lang",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "messageKey": "noLang",
            },
            "id": "has-lang",
            "impact": "serious",
            "message": "The <html> element does not have a lang attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "ACT",
      "cat.language",
      "wcag2a",
      "wcag311",
    ],
  },
  Object {
    "description": "Ensures links have discernible text",
    "help": "Links must have discernible text",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/link-name?application=axeAPI",
    "id": "link-name",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": null,
            "id": "has-visible-text",
            "impact": "minor",
            "message": "Element does not have text that is visible to screen readers",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": null,
            "id": "aria-label",
            "impact": "serious",
            "message": "aria-label attribute does not exist or is empty",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": null,
            "id": "aria-labelledby",
            "impact": "serious",
            "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
            "relatedNodes": Array [],
          },
          CheckResult {
            "data": Object {
              "messageKey": "noAttr",
            },
            "id": "non-empty-title",
            "impact": "serious",
            "message": "Element has no title attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
        "html": "<a href=\\"#\\"></a>",
        "impact": "serious",
        "none": Array [
          CheckResult {
            "data": null,
            "id": "focusable-no-name",
            "impact": "serious",
            "message": "Element is in tab order and does not have accessible text",
            "relatedNodes": Array [],
          },
        ],
        "target": Array [
          "a",
        ],
      },
    ],
    "tags": Array [
      "ACT",
      "cat.name-role-value",
      "section508",
      "section508.22.a",
      "wcag244",
      "wcag2a",
      "wcag412",
    ],
  },
  Object {
    "description": "Ensures the document has a main landmark",
    "help": "Document should have one main landmark",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/landmark-one-main?application=axeAPI",
    "id": "landmark-one-main",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [
          CheckResult {
            "data": null,
            "id": "page-has-main",
            "impact": "moderate",
            "message": "Document does not have a main landmark",
            "relatedNodes": Array [],
          },
        ],
        "any": Array [],
        "failureSummary": "Fix all of the following:
  Document does not have a main landmark",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "best-practice",
      "cat.semantics",
    ],
  },
  Object {
    "description": "Ensure that the page, or at least one of its frames contains a level-one heading",
    "help": "Page should contain a level-one heading",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one?application=axeAPI",
    "id": "page-has-heading-one",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [
          CheckResult {
            "data": null,
            "id": "page-has-heading-one",
            "impact": "moderate",
            "message": "Page must have a level-one heading",
            "relatedNodes": Array [],
          },
        ],
        "any": Array [],
        "failureSummary": "Fix all of the following:
  Page must have a level-one heading",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "best-practice",
      "cat.semantics",
    ],
  },
]
`;

exports[`a11y results filter should filter results for matching exception list 1 1`] = `
Array [
  Object {
    "description": "Ensures each HTML document contains a non-empty <title> element",
    "help": "Documents must have <title> element to aid in navigation",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/document-title?application=axeAPI",
    "id": "document-title",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": null,
            "id": "doc-has-title",
            "impact": "serious",
            "message": "Document does not have a non-empty <title> element",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "ACT",
      "cat.text-alternatives",
      "wcag242",
      "wcag2a",
    ],
  },
  Object {
    "description": "Ensures every HTML document has a lang attribute",
    "help": "<html> element must have a lang attribute",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/html-has-lang?application=axeAPI",
    "id": "html-has-lang",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "messageKey": "noLang",
            },
            "id": "has-lang",
            "impact": "serious",
            "message": "The <html> element does not have a lang attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "ACT",
      "cat.language",
      "wcag2a",
      "wcag311",
    ],
  },
  Object {
    "description": "Ensures the document has a main landmark",
    "help": "Document should have one main landmark",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/landmark-one-main?application=axeAPI",
    "id": "landmark-one-main",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [
          CheckResult {
            "data": null,
            "id": "page-has-main",
            "impact": "moderate",
            "message": "Document does not have a main landmark",
            "relatedNodes": Array [],
          },
        ],
        "any": Array [],
        "failureSummary": "Fix all of the following:
  Document does not have a main landmark",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "best-practice",
      "cat.semantics",
    ],
  },
  Object {
    "description": "Ensure that the page, or at least one of its frames contains a level-one heading",
    "help": "Page should contain a level-one heading",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one?application=axeAPI",
    "id": "page-has-heading-one",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [
          CheckResult {
            "data": null,
            "id": "page-has-heading-one",
            "impact": "moderate",
            "message": "Page must have a level-one heading",
            "relatedNodes": Array [],
          },
        ],
        "any": Array [],
        "failureSummary": "Fix all of the following:
  Page must have a level-one heading",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "best-practice",
      "cat.semantics",
    ],
  },
]
`;

exports[`a11y results filter should filter results for matching exception list 2 1`] = `
Array [
  Object {
    "description": "Ensures every HTML document has a lang attribute",
    "help": "<html> element must have a lang attribute",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/html-has-lang?application=axeAPI",
    "id": "html-has-lang",
    "impact": "serious",
    "nodes": Array [
      Object {
        "all": Array [],
        "any": Array [
          CheckResult {
            "data": Object {
              "messageKey": "noLang",
            },
            "id": "has-lang",
            "impact": "serious",
            "message": "The <html> element does not have a lang attribute",
            "relatedNodes": Array [],
          },
        ],
        "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "serious",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "ACT",
      "cat.language",
      "wcag2a",
      "wcag311",
    ],
  },
  Object {
    "description": "Ensures the document has a main landmark",
    "help": "Document should have one main landmark",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/landmark-one-main?application=axeAPI",
    "id": "landmark-one-main",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [
          CheckResult {
            "data": null,
            "id": "page-has-main",
            "impact": "moderate",
            "message": "Document does not have a main landmark",
            "relatedNodes": Array [],
          },
        ],
        "any": Array [],
        "failureSummary": "Fix all of the following:
  Document does not have a main landmark",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "best-practice",
      "cat.semantics",
    ],
  },
  Object {
    "description": "Ensure that the page, or at least one of its frames contains a level-one heading",
    "help": "Page should contain a level-one heading",
    "helpUrl": "https://dequeuniversity.com/rules/axe/4.2/page-has-heading-one?application=axeAPI",
    "id": "page-has-heading-one",
    "impact": "moderate",
    "nodes": Array [
      Object {
        "all": Array [
          CheckResult {
            "data": null,
            "id": "page-has-heading-one",
            "impact": "moderate",
            "message": "Page must have a level-one heading",
            "relatedNodes": Array [],
          },
        ],
        "any": Array [],
        "failureSummary": "Fix all of the following:
  Page must have a level-one heading",
        "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
        "impact": "moderate",
        "none": Array [],
        "target": Array [
          "html",
        ],
      },
    ],
    "tags": Array [
      "best-practice",
      "cat.semantics",
    ],
  },
]
`;
